# PWAR

./: .gitignore  CMakeLists.txt  Makefile  README.md  default.nix  flake.nix  nfpm.yaml  package.nix
.github/workflows/: build-and-package.yml
linux/: CMakeLists.txt  Makefile  PwarController.cpp  PwarController.h  flake.nix  libpwar.c  libpwar.h  meson.build  pwar.desktop  pwarPipeWire.c  pwar_cli.c  pwar_gui.cpp  pwar_gui.h  pwar_gui.qml  resources.qrc  torture.c  windows_sim.c
linux/test/: CMakeLists.txt  Makefile  integration_test.c  meson.build
protocol/: latency_manager.c  latency_manager.h  pwar_latency_types.h  pwar_packet.h  pwar_rcv_buffer.c  pwar_rcv_buffer.h  pwar_router.c  pwar_router.h  pwar_send_buffer.c  pwar_send_buffer.h
protocol/test/: CMakeLists.txt  Makefile  meson.build  pwar_rcv_buffer_test.c  pwar_router_test.c  pwar_send_buffer_test.c  pwar_send_receive_chain_test.c
scripts/: postinstall.sh  preremove.sh
windows/asio/: CMakeLists.txt  pwarASIO.cpp  pwarASIO.def  pwarASIO.h  pwarASIOLog.cpp  pwarASIOLog.h  wintimer.cpp
windows/torture/: CMakeLists.txt  torture_main.cpp
